doc/windows/VB6.0/32bit/multi_card/gts.bas


Public Declare Function GT_SetTrigger Lib "gts.dll" (ByVal cardNum As Integer,ByVal i As Integer, ByRef pTrigger As TTrigger) As Integer
Public Declare Function GT_GetTrigger Lib "gts.dll" (ByVal cardNum As Integer,ByVal i As Integer, ByRef pTrigger As TTrigger) As Integer
Public Declare Function GT_GetTriggerStatus Lib "gts.dll" (ByVal cardNum As Integer,ByVal i As Integer, ByRef pTriggerStatus As TTriggerStatus, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_GetTriggerStatusEx Lib "gts.dll" (ByVal cardNum As Integer,ByVal i As Integer, ByRef pTriggerStatusEx As TTriggerStatusEx, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_ClearTriggerStatus Lib "gts.dll" (ByVal cardNum As Integer,ByVal i As Integer) As Integer

Public Declare Function GT_SetComparePort Lib "gts.dll" (ByVal cardNum As Integer,ByVal channel As Integer, ByVal hsio0 As Integer, ByVal hsio1 As Integer) As Integer

Public Declare Function GT_ComparePulse Lib "gts.dll" (ByVal cardNum As Integer,ByVal level As Integer, ByVal outputType As Integer, ByVal time As Integer) As Integer
Public Declare Function GT_CompareStop Lib "gts.dll" (ByVal cardNum As Integer) As Integer
Public Declare Function GT_CompareStatus Lib "gts.dll" (ByVal cardNum As Integer,ByRef pStatus As Integer, ByRef pCount As Long) As Integer
Public Declare Function GT_CompareData Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByVal source As Integer, ByVal pulseType As Integer, ByVal startLevel As Integer, ByVal time As Integer, ByRef pBuf1() As Long, ByVal count1 As Integer, ByRef pBuf2() As Long, ByVal count2 As Integer) As Integer
Public Declare Function GT_CompareLinear Lib "gts.dll" (ByVal cardNum As Integer,ByVal encoder As Integer, ByVal channel As Integer, ByVal startPos As Long, ByVal repeatTimes As Long, ByVal interval As Long, ByVal time As Integer, ByVal source As Integer) As Integer
Public Declare Function GT_CompareContinuePulseMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal mode As Integer, ByVal count As Integer, ByVal standTime As Integer) As Integer

Public Declare Function GT_SetEncResponseCheck Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByVal dacThreshold As Integer, ByVal minEncVel As Double, ByVal time As Long) As Integer
Public Declare Function GT_GetEncResponseCheck Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByRef pDacThreshold As Integer, ByRef pMinEncVel As Double, ByRef pTime As Long) As Integer
Public Declare Function GT_EnableEncResponseCheck Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer) As Integer
Public Declare Function GT_DisableEncResponseCheck Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer) As Integer

Public Declare Function GT_2DCompareMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer, ByVal mode As Integer) As Integer
Public Declare Function GT_2DComparePulse Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer, ByVal level As Integer, ByVal outputType As Integer, ByVal time As Integer) As Integer
Public Declare Function GT_2DCompareStop Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer)
Public Declare Function GT_2DCompareClear Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer)
Public Declare Function GT_2DCompareStatus Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer, ByRef pStatus As Integer, ByRef pCount As Long, ByRef pFifo As Integer, ByRef pFifoCount As Integer, Optional ByRef pBufCount As Integer = 0) As Integer
Public Declare Function GT_2DCompareSetPrm Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer, ByRef pPrm As T2DComparePrm) As Integer
Public Declare Function GT_2DCompareData Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer, ByVal count As Integer, ByRef pBuf As T2DCompareData, ByVal fifo As Integer) As Integer
Public Declare Function GT_2DCompareStart Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer) As Integer
Public Declare Function GT_2DCompareClearData Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer) As Integer
Public Declare Function GT_2DCompareSetPreOutTime Lib "gts.dll" (ByVal cardNum As Integer,ByVal chn As Integer, ByVal preOutputTime As Double) As Integer

Public Declare Function GT_SetAxisMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal mode As Integer) As Integer
Public Declare Function GT_GetAxisMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal pMode As Integer) As Integer
Public Declare Function GT_SetHSIOOpt Lib "gts.dll" (ByVal cardNum As Integer,ByVal value As Integer, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_GetHSIOOpt Lib "gts.dll" (ByVal cardNum As Integer,ByRef pValue As Integer, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_LaserPowerMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal laserPowerMode As Integer, ByVal maxValue As Double, ByVal minValue As Double, Optional ByVal channel As Integer = 0, Optional ByVal delaymode As Integer = 0) As Integer
Public Declare Function GT_LaserPrfCmd Lib "gts.dll" (ByVal cardNum As Integer,ByVal outputCmd As Double, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_LaserOutFrq Lib "gts.dll" (ByVal cardNum As Integer,ByVal outFrq As Double, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_SetPulseWidth Lib "gts.dll" (ByVal cardNum As Integer,ByVal width As Long, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_SetWaitPulse Lib "gts.dll" (ByVal cardNum As Integer,ByVal mode As Integer, ByVal waitPulseFrq As Double, ByVal waitPulseDuty As Double, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_SetPreVltg Lib "gts.dll" (ByVal cardNum As Integer,ByVal mode As Integer, ByVal voltageValue As Double, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_SetLevelDelay Lib "gts.dll" (ByVal cardNum As Integer,ByVal offDelay As Integer, ByVal onDelay As Integer, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_EnaFPK Lib "gts.dll" (ByVal cardNum As Integer,ByVal time1 As Integer, ByVal time2 As Integer, ByVal laserOffDelay As Integer, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_DisFPK Lib "gts.dll" (ByVal cardNum As Integer,Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_SetLaserDisMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal mode As Integer, ByVal source As Integer, ByRef pPos As Long, ByRef pScale As Double, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_SetLaserDisRatio Lib "gts.dll" (ByVal cardNum As Integer,ByRef pRatio As Double, ByVal minPower As Double, ByVal maxPower As Double, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_SetWaitPulseEx Lib "gts.dll" (ByVal cardNum As Integer,ByVal mode As Integer, ByVal waitPulseFrq As Double, ByVal waitPulseDuty As Double) As Integer
Public Declare Function GT_SetLaserMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal mode As Integer) As Integer
Public Declare Function GT_SetLaserFollowSpline Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableId As Integer, ByVal n As Long, ByRef pX As Double, ByRef pY As Double, ByVal beginValue As Double, ByVal endValue As Double, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_GetLaserFollowSpline Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableId As Integer, ByVal n As Long, ByRef pX As Double, ByRef pY As Double, ByRef pA As Double, ByRef pB As Double, ByRef pC As Double, ByRef pCount As Long, Optional ByVal channel As Integer = 0) As Integer

'ExtMul
Public Declare Function GT_OpenExtMdl Lib "gts.dll" (ByVal cardNum As Integer,Optional ByRef pDllName As String) As Integer
Public Declare Function GT_CloseExtMdl Lib "gts.dll" (ByVal cardNum As Integer) As Integer
Public Declare Function GT_SwitchtoCardNoExtMdl Lib "gts.dll" (ByVal cardNum As Integer,ByVal card As Integer) As Integer
Public Declare Function GT_ResetExtMdl Lib "gts.dll" (ByVal cardNum As Integer) As Integer
Public Declare Function GT_LoadExtConfig Lib "gts.dll" (ByVal cardNum As Integer,ByRef pFileName As String) As Integer
Public Declare Function GT_SetExtIoValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByVal value As Integer) As Integer
Public Declare Function GT_GetExtIoValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByRef pValue As Integer) As Integer
Public Declare Function GT_SetExtIoBit Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByVal index As Integer, ByVal value As Integer) As Integer
Public Declare Function GT_GetExtIoBit Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByVal index As Integer, ByRef pValue As Integer) As Integer
Public Declare Function GT_GetExtAdValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByVal chn As Integer, ByRef pValue As Integer) As Integer
Public Declare Function GT_GetExtAdVoltage Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByVal chn As Integer, ByRef pValue As Double) As Integer
Public Declare Function GT_SetExtDaValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByVal chn As Integer, ByVal value As Integer) As Integer
Public Declare Function GT_SetExtDaVoltage Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByVal chn As Integer, ByVal value As Double) As Integer
Public Declare Function GT_GetStsExtMdl Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByVal chn As Integer, ByRef pStatus As Integer) As Integer
Public Declare Function GT_GetExtDoValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal mdl As Integer, ByRef pValue As Integer) As Integer
Public Declare Function GT_GetExtMdlMode Lib "gts.dll" (ByVal cardNum As Integer,ByRef pMode As Integer) As Integer
Public Declare Function GT_SetExtMdlMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal mode As Integer) As Integer
Public Declare Function GT_UploadConfig Lib "gts.dll" (ByVal cardNum As Integer) As Integer
Public Declare Function GT_DownloadConfig Lib "gts.dll" (ByVal cardNum As Integer) As Integer

Public Declare Function GT_GetUuid Lib "gts.dll" (ByVal cardNum As Integer,ByRef pCode As String, ByVal count As Integer) As Integer
Public Declare Function GT_SetUuid Lib "gts.dll" (ByVal cardNum As Integer,ByRef pCode As String, ByVal count As Integer) As Integer

'2D Compensate
Public Type TCompensate2DTable
     count1 As Integer
     count2 As Integer
     posBegin1 As Long
     posBegin2 As Long
     step1 As Long
     step2 As Long
End Type
Public Type TCompensate2D
     enable As Integer
     tableIndex As Integer
     axisType1 As Integer
     axisType2 As Integer
     axisIndex1 As Integer
     axisIndex2 As Integer
End Type
Public Declare Function GT_SetCompensate2DTable Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableIndex As Integer, ByRef pTable As TCompensate2DTable, ByRef pData As Long, Optional ByVal externComp As Integer = 0) As Integer
Public Declare Function GT_GetCompensate2DTable Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableIndex As Integer, ByRef pTable As TCompensate2DTable, Optional ByRef pExternComp As Integer) As Integer
Public Declare Function GT_SetCompensate2D Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pComp2d As TCompensate2D) As Integer
Public Declare Function GT_GetCompensate2D Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pComp2d As TCompensate2D) As Integer
Public Declare Function GT_GetCompensate2DValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pValue As Double) As Integer
